# python-maturin-cedar-client

./: README.md  pyproject.toml
src/maturin_cedar_client/: lib.py
